--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "help": "^3.0.2",
+    "mongoose": "^6.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
